--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,7 @@
-streamlit
-scikit-learn
-joblib
-pandas
+streamlit>=1.24.0
+scikit-learn>=1.3.0
+pandas>=2.0.0
+joblib>=1.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+numpy>=1.24.0
